Update: styling application

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="tinggi">Tinggi</string>
     <string name="hasil">Hasil</string>
     <string name="hitung">Hitung</string>
+    <string name="nama">Nyoman Tri Darma Wahyudi</string>
+    <string name="nim">2305551052</string>
 </resources>
